Fix overlapping main

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -25,6 +25,8 @@ main
   display: flex
   align-items: center
   flex: 1
+  padding-top: 10rem
+  padding-bottom: 6.8rem
 
 .container
   position: relative
@@ -77,6 +79,7 @@ a
   display: flex
   align-items: center
   justify-content: space-between
+  z-index: 1
   border-radius: 0 0 1.6rem 1.6rem
   border-top: 3px solid $clr-mustard
   &__logo
